--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ coverage.xml
 #   having no cross-platform support, pipenv may install dependencies that don't work, or not
 #   install all needed dependencies.
 #Pipfile.lock
+.env
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
@@ -58,5 +59,6 @@ celerybeat.pid
 media/
 voting/migrations/*
 account/migrations/*
+api/migrations/*
 # static/
-# README.md
+README.md
