--- a/.gitignore
+++ b/.gitignore
@@ -3,41 +3,8 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-
 # pipenv
 .env
-
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
 
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
@@ -47,14 +14,9 @@ __pypackages__/
 celerybeat-schedule
 celerybeat.pid
 
-# SageMath parsed files
-*.sage.py
-# Pyre type checker
-.pyre/
-
 
 # Django Ignore
-# db.sqlite3
+db.sqlite3
 .vscode
 .idea
 *.pyc
